--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.1/css/font-awesome.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header class="header_sec">
   <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
       <a class="navbar-brand" href="#">
-        <img src="./img/the-maid-place-logo.jpg">
+        <img src="the-maid-place-logo.jpg">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -127,9 +127,9 @@
 </div>
 <!--review-->
 <section class="review">
-  <img src="./img/review_logo.webp">
-  <img src="./img/review_logo2.webp">
-  <img src="./img/review_logo3.webp">
+  <img src="review_logo.webp">
+  <img src="review_logo2.webp">
+  <img src="review_logo3.webp">
 </section>
 <!--about_sec-->
 <section class="about_sec">
@@ -156,7 +156,7 @@
     </div>
       <div class="col-lg-6">
         <div class="about_img">
-          <img src="./img/maid-home.gif">
+          <img src="maid-home.gif">
         </div>
       </div>
   </div>
@@ -173,7 +173,7 @@
       <div class="col-lg-3">
         <div class="about_srvc">
           <div class="about_icon">
-            <img src="./img/service_icon.webp">
+            <img src="service_icon.webp">
           </div>
             <h4>MOVE IN CLEANING</h4>
             <p>A Move In Clean is perfect if you just bought a new home, and are not sure how the former owner will leave it for you.</p>
@@ -182,7 +182,7 @@
       <div class="col-lg-3">
         <div class="about_srvc">
           <div class="about_icon">
-            <img src="./img/service_icon.webp">
+            <img src="service_icon.webp">
           </div>
             <h4>MOVE IN CLEANING</h4>
             <p>A Move In Clean is perfect if you just bought a new home, and are not sure how the former owner will leave it for you.</p>
@@ -191,7 +191,7 @@
       <div class="col-lg-3">
         <div class="about_srvc">
           <div class="about_icon">
-            <img src="./img/service_icon.webp">
+            <img src="service_icon.webp">
           </div>
             <h4>MOVE IN CLEANING</h4>
             <p>A Move In Clean is perfect if you just bought a new home, and are not sure how the former owner will leave it for you.</p>
@@ -200,7 +200,7 @@
       <div class="col-lg-3">
         <div class="about_srvc">
           <div class="about_icon">
-            <img src="./img/service_icon.webp">
+            <img src="service_icon.webp">
           </div>
             <h4>MOVE IN CLEANING</h4>
             <p>A Move In Clean is perfect if you just bought a new home, and are not sure how the former owner will leave it for you.</p>
@@ -209,7 +209,7 @@
       <div class="col-lg-3">
         <div class="about_srvc">
           <div class="about_icon">
-            <img src="./img/service_icon.webp">
+            <img src="service_icon.webp">
           </div>
             <h4>MOVE IN CLEANING</h4>
             <p>A Move In Clean is perfect if you just bought a new home, and are not sure how the former owner will leave it for you.</p>
@@ -218,7 +218,7 @@
       <div class="col-lg-3">
         <div class="about_srvc">
           <div class="about_icon">
-            <img src="./img/service_icon.webp">
+            <img src="service_icon.webp">
           </div>
             <h4>MOVE IN CLEANING</h4>
             <p>A Move In Clean is perfect if you just bought a new home, and are not sure how the former owner will leave it for you.</p>
@@ -227,7 +227,7 @@
       <div class="col-lg-3">
         <div class="about_srvc">
           <div class="about_icon">
-            <img src="./img/service_icon.webp">
+            <img src="service_icon.webp">
           </div>
             <h4>MOVE IN CLEANING</h4>
             <p>A Move In Clean is perfect if you just bought a new home, and are not sure how the former owner will leave it for you.</p>
@@ -236,7 +236,7 @@
       <div class="col-lg-3">
         <div class="about_srvc">
           <div class="about_icon">
-            <img src="./img/service_icon.webp">
+            <img src="service_icon.webp">
           </div>
             <h4>MOVE IN CLEANING</h4>
             <p>A Move In Clean is perfect if you just bought a new home, and are not sure how the former owner will leave it for you.</p>
@@ -264,7 +264,7 @@
       <div class="col-lg-3">
         <div class="plan_box">
           <div class="icon">
-            <img src="./img/package_icon1.webp">
+            <img src="package_icon1.webp">
           </div>
           <div class="icon_txt">
             <h4>GENERAL CLEAN</h4>
@@ -280,7 +280,7 @@
       <div class="col-lg-3">
         <div class="plan_box">
           <div class="icon">
-            <img src="./img/package_icon1.webp">
+            <img src="package_icon1.webp">
           </div>
           <div class="icon_txt">
             <h4>GENERAL CLEAN</h4>
@@ -296,7 +296,7 @@
       <div class="col-lg-3">
         <div class="plan_box">
           <div class="icon">
-            <img src="./img/package_icon1.webp">
+            <img src="package_icon1.webp">
           </div>
           <div class="icon_txt">
             <h4>GENERAL CLEAN</h4>
@@ -312,7 +312,7 @@
       <div class="col-lg-3">
         <div class="plan_box">
           <div class="icon">
-            <img src="./img/package_icon1.webp">
+            <img src="package_icon1.webp">
           </div>
           <div class="icon_txt">
             <h4>GENERAL CLEAN</h4>
@@ -337,13 +337,13 @@
       </div>
       <div class="review">
         <a href="#">
-          <img src="./img/review_logo.webp">
+          <img src="review_logo.webp">
         </a>
         <a href="#">
-          <img src="./img/review_logo2.webp">
+          <img src="review_logo2.webp">
         </a>
         <a href="#">
-          <img src="./img/review_logo3.webp">
+          <img src="review_logo3.webp">
         </a>
       </div>
       </div>
@@ -383,7 +383,7 @@
       <div class="col-lg-6">
         <div class="adrs_box">
           <div class="contact_icon">
-            <img src="./img/address_icon.webp">
+            <img src="address_icon.webp">
           </div>
           <div class="contact_txt">
             <h3>Address</h3>
@@ -392,7 +392,7 @@
         </div>
         <div class="adrs_box">
           <div class="contact_icon">
-            <img src="./img/address_icon2.webp">
+            <img src="address_icon2.webp">
           </div>
           <div class="contact_txt">
             <h3>Send an Email</h3>
@@ -401,7 +401,7 @@
         </div>
         <div class="adrs_box">
           <div class="contact_icon">
-            <img src="./img/address_icon3.webp">
+            <img src="address_icon3.webp">
           </div>
           <div class="contact_txt">
             <h3>Call Us Today</h3>
